--- a/create_nft_swapx_polygon_add_live.html
+++ b/create_nft_swapx_polygon_add_live.html
@@ -38,28 +38,9 @@ cursor: pointer;
 border: 1px solid gray;
 }
 
-#categorylist {
-margin-top: 6px;
-display: none;
-}
 
-#category219w1, #category219w2, #category219w3, #category219w4, #category219w5, #category219w6, #category219w7, #category219w8, #category219w9, #category219w10, #category219w11, #category219w12, #category219w13, #category219w14, #category219w15, #category219w16, #category219w17, #category219w18, #category219w19, #category219w20, #category219w21, #category219w22, #category219w23, #category219w24, #category219w25, #category219w26, #category219w27, #category219w28, #category219w29, #category219w30, #category219w31, #category219w32, #category219w33, #category219w34, #category219w35, #category219w36, #category219w37, #category219w38, #category219w39, #category219w40, #category219w41, #category219w42, #category219w43, #category219w44, #category219w45, #category219w46, #category219w47, #category219w48, #category219w49, #category219w50, #category219w51, #category219w52, #category219w53, #category219w54, #category219w55, #category219w56, #category219w57, #category219w58, #category219w59, #category219w60, #category219w61, #category219w62, #category219w63, #category219w64, #category219w65, #category219w66, #category219w67, #category219w68, #category219w69, #category219w70, #category219w71, #category219w72, #category219w73, #category219w74, #category219w75, #category219w76, #category219w77, #category219w78, #category219w79, #category219w80, #category1Z81, #category121w82, #category1Z83, #category1Z84, #category1Z85, #category2Z1, #category2Z2, #category2Z3, #category2Z4, #category2Z5, #category2Z6, #category2Z7, #category2Z8, #category2Z9, #category2Z10, #category2Z11, #category2Z12, #category2Z13, #category2Z14, #category2Z15, #category2Z16, #category2Z17, #category2Z18, #category2Z19, #category2Z20, #category2Z21, #category2Z22, #category2Z23, #category2Z24, #category2Z25, #category2Z26, #category2Z27, #category2Z28, #category2Z29, #category2Z30, #category2Z31, #category2Z32, #category2Z33, #category2Z34, #category2Z35, #category2Z36, #category2Z37, #category2Z38, #category2Z39, #category2Z40, #category2Z41, #category2Z42, #category2Z43, #category2Z44, #category2Z45, #category2Z46, #category2Z47, #category2Z48, #category2Z49, #category2Z50, #category2Z51, #category2Z52,
-#category2Z53, #category2Z54, #category2Z55, #category2Z56, #category2Z57, #category2Z58, #category2Z59, #category2Z60, #category2Z61, #category2Z62, #category2Z63, #category2Z64, #category2Z65, #category2Z66, #category2Z66, #category2Z67, #category2Z68, #category2Z69, #category2Z70, #category2Z71, #category2Z72, #category2Z73, #category2Z74, #category2Z75, #category2Z76, #category2Z77, #category2Z78, #category2Z79, #category2Z80, #category3Z2, #category3Z3, #category3Z4, #category3Z5, #category3Z6, #category3Z7, #category3Z8, #category3Z9, #category3Z10, #category3Z11, #category3Z12, #category3Z13, #category3Z14, #category3Z15, #category3Z16, #category3Z17, #category3Z18, #category3Z19, #category3Z20, #category3Z21, #category3Z22, #category3Z23, #category3Z24, #category3Z25, #category3Z26, #category3Z27, #category3Z28, #category3Z29, #category3Z30, #category3Z31, #category3Z32, #category3Z33, #category3Z34, #category3Z35, #category3Z36, #category3Z37, #category3Z38, #category3Z39, #category3Z40, #category3Z41, #category3Z42, #category3Z43, #category3Z44, #category3Z45, #category3Z46, #category3Z47, #category3Z48, #category3Z49, #category3Z50, #category3Z51, #category3Z52, #category3Z53, #category3Z54, #category3Z55, #category3Z56, #category3Z57, #category3Z58, #category3Z59, #category3Z60, #category3Z61, #category3Z62, #category3Z63, #category3Z64, #category3Z65, #category3Z66, #category3Z67, #category3Z68, #category3Z69, #category3Z70, #category3Z71, #category3Z72, #category3Z73, #category3Z74, #category3Z75, #category3Z76, #category3Z77, #category3Z78, #category3Z79, #category3Z80, #category2Z82 {
-display: none;
-}
+ 
 
-#closing {
-display: none;
-#font-style: italic;
-}  
-
-#answers{
-    border:3px solid magenta;
-    width:249px;
-    float:left;
-   
-    padding:0 20px 0;
-}
 
 #answers[type="radio"]{
     float: left;
@@ -71,6 +52,28 @@ p {
   top:150px
   text-align:center
   
+}
+
+input.offer_no {
+display: block;
+  
+  border-radius: 5px;
+  margin-top:150px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 400px
+  height:15px
+}
+
+input.offer_no2 {
+display: block;
+  
+  border-radius: 5px;
+  margin-top:5px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 400px
+  height:15px
 }
 
 input.your-nft {
@@ -101,7 +104,7 @@ input.their-nft {
 display: block;
   
   border-radius: 4px;
-  margin-top:25px;
+  margin-top:1px;
   margin-right: auto;
   margin-left: auto;
   width: 350px
@@ -143,20 +146,22 @@ display: block;
 
 
 
-<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; margin-top:120px;">trade</center>
-<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">your NFT</center>
 
-<input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:185; right:790;">NFT contract address 1</label>	
-<input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:220; right:790;">NFT contract token ID 1</label>		
+<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; top:150;">your NFT</center>
 
-<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:100px;">&#8645;</center>
+<input type="text" class="offer_no" id="offer_no" name="offer_no" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:178; right:790">offer no:</label>
+<input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:218; right:790;">NFT contract address 1</label>	
+<input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:253; right:790;">NFT contract token ID 1</label>		
 
-<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">for</center>
+<input type="button" class="btn" value=" add to offer" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>
+
+
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">their NFT</center>
-<input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:420; right:790">NFT contract address 2</label>
-<input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:450; right:790">NFT contract token ID 2</label>
+<input type="text" class="offer_no2" id="offer_no2" name="offer_no2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:325; right:790">offer no:</label>
+<input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:355; right:790">NFT contract address 2</label>
+<input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:385; right:790">NFT contract token ID 2</label>
 
-<input type="button" class="btn" value="offer trade" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>	
+	
 
 </div>
 <div id=category121w82>	
@@ -513,11 +518,6 @@ var abi = [
 				"internalType": "uint256",
 				"name": "_fee",
 				"type": "uint256"
-			},
-			{
-				"internalType": "address",
-				"name": "_to",
-				"type": "address"
 			}
 		],
 		"name": "setfee",
@@ -1071,13 +1071,12 @@ var abi = [
 		"type": "function"
 	}
 ]
-
 	//localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
 	//localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
 	//localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-var contract_address = web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
+var contract_address = web3.utils.toChecksumAddress("0x362796183ce6fb4e2215aa6ea57aadbc56b6a870")
 
 var contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -1215,15 +1214,17 @@ function getAccounts(){
 
 	
 	
-function loan_request(){
+function add_to_offer(){
 
 //await window.ethereum.enable();
+localStorage.setItem("offer_no", document.getElementById("offer_no").value);
 localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").value);
 	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
 	localStorage.setItem("NFT_contract2", document.getElementById("NFT_contract2").value);
 	localStorage.setItem("NFT_Token_ID2", document.getElementById("NFT_Token_ID2").value);
 	//localStorage.setItem("mySharedData", document.getElementById("password").value);
 	
+	var _n = localStorage.getItem("offer_no");
 	var nft_k = localStorage.getItem("NFT_contract1");
 	var nft_id = localStorage.getItem("NFT_Token_ID1");
 	var loan_amt = localStorage.getItem("NFT_contract2");
@@ -1241,7 +1242,7 @@ var acct = (async function(){
 	var num = await contract_bal.methods.last().call();
 	console.log("num: " + num);
 	var n = parseInt(num);
-	var _n = n + 1
+	//var _n = n + 1
 	console.log("_n: " + _n)
 	console.log(nft_k);
 	console.log(nft_id);
@@ -1249,14 +1250,14 @@ var acct = (async function(){
 	console.log(loan_term);
  	var contract = web3.utils.toChecksumAddress(nft_k);
 	
-        var _data = new web3.eth.Contract(abi, contract_address).methods.offer_trade(contract, nft_id, loan_amt, loan_term, _n).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.add_to_offer(nft_k, nft_id, _n).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
 	_nonce = result
         console.log(account)
 		
-	await web3.eth.sendTransaction({'gas': web3.utils.toHex(500000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 500001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
+	await web3.eth.sendTransaction({'gas': web3.utils.toHex(500000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 100000001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
          //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
             //console.log(accounts[0])
@@ -1393,7 +1394,7 @@ var acct = (async function(){
 	//var add1x = localStorage.getItem("mySharedData");
 	
  	var contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0xd284f2833f82732fe68be0be55ce279e5421bb19", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x362796183ce6fb4e2215aa6ea57aadbc56b6a870", nft_id).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
@@ -1411,7 +1412,7 @@ var acct = (async function(){
 
 })()
 
-	loan_request();
+	add_to_offer();
 	
 }
 
