--- a/create_nft_swapx_polygon_add_live.html
+++ b/create_nft_swapx_polygon_add_live.html
@@ -160,7 +160,7 @@ display: block;
 <input type="text" class="offer_no2" id="offer_no2" name="offer_no2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:345; right:790">offer no:</label>
 <input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:375; right:790">NFT contract address 2</label>
 <input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:405; right:790">NFT contract token ID 2</label>
-<input type="button" class="btn" value=" add to offer" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="add_to_accept()"/>
+<input type="button" class="btn" value=" add to accept" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="add_to_accept()"/>
 	
 
 </div>
@@ -1283,8 +1283,8 @@ localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").v
 	var _n = localStorage.getItem("offer_no");
 	var nft_k = localStorage.getItem("NFT_contract2");
 	var nft_id = localStorage.getItem("NFT_Token_ID2");
-	var loan_amt = localStorage.getItem("NFT_contract2");
-	var loan_term = localStorage.getItem("NFT_Token_ID2");
+	//var loan_amt = localStorage.getItem("NFT_contract2");
+	//var loan_term = localStorage.getItem("NFT_Token_ID2");
 	//var add1x = localStorage.getItem("mySharedData");
 //account_address.push(add1x)
 //console.log(account_address[0])
