--- a/create_nft_swapx_polygon_add_live.html
+++ b/create_nft_swapx_polygon_add_live.html
@@ -164,10 +164,7 @@ display: block;
 	
 
 </div>
-<div id=category121w82>	
-<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="prompt_approve()"/>	
-</div>
-<div id="content"></div>
+
 
 
 
@@ -176,7 +173,10 @@ display: block;
 
 //var pwd = document.getElementById("password").value;
 
-              
+<!-- <div id=category121w82>	 -->
+<!-- <input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="prompt_approve()"/>	 -->
+<!-- </div> -->
+<!-- <div id="content"></div>              -->
 
 
 var metamask = (async function(){
