--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1154,6 +1154,7 @@ var display = (async function(){
 	for (j=0;j<contract_length1;j++){ 
 	
 	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i, address, j).call();
+	console.log("array_contract: " + contract_ID2)
 	array_contract_ID2.push("'" + contract_ID2 + "'");
 	
 	
@@ -1175,6 +1176,7 @@ var display = (async function(){
 	
 	
 	var tokenID2 = await contract_bal.methods.tokens_list2xy(i, address, j).call();
+	console.log("array_token: " + tokenID2)
 	array_tokenID2.push(tokenID2);
 	//document.getElementById("loan_obligation").innerHTML = "Loan is already made is " + obligation;
 	//console.log(obligation)
