--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1154,7 +1154,7 @@ var display = (async function(){
 	for (j=0;j<contract_length1;j++){ 
 	
 	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i, address, j).call();
-	console.log("array_contract: " + contract_ID2)
+	console.log("array_contract: " + contract_ID2 + "no# " + i + ' ' + j)
 	array_contract_ID2.push("'" + contract_ID2 + "'");
 	
 	
