--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1227,7 +1227,7 @@ var display = (async function(){
 	newBtn.setAttribute('type', 'button');
 	newBtn.value = "accept trade";
 	//newBtn.setAttribute('onclick', 'to_approve(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + "," + _i + ')');
-	newBtn.setAttribute('onclick', 'to_approve(' + "[0,2]" + ","  + "'" + address + "'" + ", [" + array_tokenID2 + "]," + _i + ')');
+	newBtn.setAttribute('onclick', 'to_approve(' + "[" + array_contract_ID2 + "]" + ","  + "'" + address + "'" + ", [0,2]," + _i + ')');
 	console.log('make_trade(' + "'" + array_contract_ID2 + "'" + ","  + "'" + address + "'" + "," + array_tokenID2 + ')')
 	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute;left:50%;";
 	
