--- a/create_nft_swapx.html
+++ b/create_nft_swapx.html
@@ -91,6 +91,15 @@ height: 50px;
 <button style="color:grey; font-family: helvetica narrow, sans-serif; font-weight:200; position:absolute; top:0; right:0;" onclick="open_window()"">Offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>
 
+<embed 
+    type="application/x-vlc-plugin" 
+    pluginspage="http://www.videolan.org" 
+    version="VideoLAN.VLCPlugin.2"
+    width="640"
+    height="480"
+    target="file:///x:/vid.avi"
+    id="vlc">
+</embed>
 	
 </div>
 
@@ -1023,7 +1032,7 @@ var abi = [
 	//localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-var contract_address = web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
+var contract_address = web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
 
 var contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -1261,7 +1270,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	var contract_address = web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
+	var contract_address = web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
   	
 	
 	var contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1580,7 +1589,7 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	var contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x12df499321aa0a017516ba0d440ab64a9f634d98", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0xd284f2833f82732fe68be0be55ce279e5421bb19", nft_id).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
@@ -1602,7 +1611,7 @@ var acct = (async function(){
 
 function getNFT(){
 var my_nft =(async function(){
-var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
+var contract_address = await web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
 var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 var contract_bal = await new web3.eth.Contract(abi, contract_address);
 var totalSupply = await contract_bal.methods.baseURI().call();
@@ -1634,7 +1643,7 @@ function loan_amount(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	var contract_address = web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
+	var contract_address = web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
   	
 	
 	var contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1671,7 +1680,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
+  var contract_address = await web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
   var bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1703,7 +1712,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
+  var contract_address = await web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
   var bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1722,7 +1731,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
+  	var contract_address = await web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
   
 	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1760,7 +1769,7 @@ function setvalue(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
+  	var contract_address = await web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
   	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1803,7 +1812,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
+  	var contract_address = await web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
   	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
