--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -85,7 +85,7 @@ font-size: large;
 
 
 <body>
-<h1 style="color:#ba55d3; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h1>
+<img>logoCapture.PNG</img>
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
 
