--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -50,6 +50,13 @@ border: 2px solid #5F6C6D;
 
 }
 
+logo {
+
+width: 100px;
+height: 100px;
+border: 2px solid #5F6C6D;
+
+}
 
 
 input {
@@ -85,7 +92,7 @@ font-size: large;
 
 
 <body>
-<img>logoCapture.PNG</img>
+<img id="logo" src=logoCapture.PNG></img>
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
 
