--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -988,13 +988,13 @@ var abi = [
 	//localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-var contract_address = web3.utils.toChecksumAddress("0x362796183ce6fb4e2215aa6ea57aadbc56b6a870")
+const contract_address = web3.utils.toChecksumAddress("0x362796183ce6fb4e2215aa6ea57aadbc56b6a870")
 
-var contract_bal = new web3.eth.Contract(abi, contract_address);
+const contract_bal = new web3.eth.Contract(abi, contract_address);
 
-var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
+const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 
-var account_address = [];
+const account_address = [];
 
 
 
@@ -1014,11 +1014,11 @@ var display = (async function(){
 		
 		
 	
-	var contract_bal = new web3.eth.Contract(abi, contract_address);
+	//const contract_bal = new web3.eth.Contract(abi, contract_address);
 	
 	
 	
-	var addressCount = await contract_bal.methods.Address_listCount().call();
+	const addressCount = await contract_bal.methods.Address_listCount().call();
 	
 	
 	
