--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1019,11 +1019,11 @@ var display = (async function(){
 	
 	
 	
+	address_count = addressCount
 	
 	
 	
-	
-	for (var i = addressCount; i>0; i--){
+	for (var i = address_count; i>0; i--){
 	var address = await contract_bal.methods.address_list(i-1).call();
 	
 	var chat = document.getElementById("contract_address_ID"); // finds the container
