--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -996,13 +996,13 @@ const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 
 const account_address = [];
 
-
- var display = (async function(){
+$(document).ready(function(){
+var display_ = (async function(){
 addressCount = await contract_bal.methods.Address_listCount().call();
+})()
 }
 
-
-var = table_array = [];
+const = table_array = [];
 
  $(document).ready(function(){
 //function display_loan_info(){
