--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1092,7 +1092,7 @@ var display = (async function(){
 			}
             img.src = image_
             ew1Div.appendChild(img);
-			
+			return 1
 			
 			
 	
