--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -160,9 +160,9 @@ display: block;
 <input type="button" class="btn" value="offer trade" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>	
 
 </div>
-<div id=category121w82>	
-<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="prompt_approve()"/>	
-</div>
+
+<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="image_path()"/>	
+
 <div id="content"></div>
 
 
@@ -1084,6 +1084,66 @@ var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 var account_address = [];
 
 
+function image_path(){
+	localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").value);
+	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
+	localStorage.setItem("NFT_contract2", document.getElementById("NFT_contract2").value);
+	localStorage.setItem("NFT_Token_ID2", document.getElementById("NFT_Token_ID2").value);
+	//localStorage.setItem("mySharedData", document.getElementById("password").value);
+	
+	var contract_ID1 = localStorage.getItem("NFT_contract1");
+	var tokenID = localStorage.getItem("NFT_Token_ID1");
+	var loan_amt = localStorage.getItem("NFT_contract2");
+	var loan_term = localStorage.getItem("NFT_Token_ID2");
+	//var add1x = localStorage.getItem("mySharedData");
+
+
+	var image = await image_and_name(contract_ID1, tokenID, getImage);
+	//console.log(image);
+	var newDiv = document.createElement('img');
+	newDiv.id = 'rs'+i + j;
+	//newDiv.setAttribute('width', '15%');
+	//newDiv.setAttribute('height', '15%');
+	newDiv.loading = "lazy";
+	//newDiv.onload = await "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))"
+	//newDiv.addEventListener("load", "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))");
+	//chat.appendChild(newDiv);
+	ew1Div.addEventListener("load", getImage);
+	
+	
+	function getImage(xhttp){
+			//var result = xhttp.response;
+			
+			var result = xhttp.response;
+			
+			JSONresult = JSON.parse(result);
+			
+			//JSONresult = result
+			
+			//console.log(JSONresult.image);
+			//var result1 = JSONresult.image
+			//return result1
+			var image_ = JSONresult.image
+			var img = new Image();
+			//'https://ipfs.io/ipfs/' + lnk.slice(7)
+			if (JSONresult.image.substring(0,4) == "ipfs"){
+			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
+			}
+            img.src = image_
+            ew1Div.appendChild(img);
+			console.log(image_)
+			return 1
+			
+			
+	
+	}
+	
+	
+	}
+	
+	
+	
+
 
  $(document).ready(function(){
 //function display_loan_info(){
@@ -1315,45 +1375,42 @@ var acct = (async function(){
 })()
 }
 
-function image_and_name(){
+function image_and_name(k,n, getImage){
 
-	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract1").value);
-	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID1").value);
+	//localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
+	//localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
 	
-	var nft_k = localStorage.getItem("NFT Contract");
-	var nft_id = localStorage.getItem("NFT Token ID");
-	
+	//var nft_k = localStorage.getItem("NFT Contract");
+	var nft_k = k 
+	//var nft_id = localStorage.getItem("NFT Token ID");
+	var nft_id = n
   var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress(nft_k)
+  var contract_address = web3.utils.toChecksumAddress(nft_k)
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
-  //var lnk = await contract_bal.methods.tokenURI(nft_id).call();
-  var lnk = "https://opensea.io/assets/matic/" & nft_k & "/" & nft_id
+  var lnk = await contract_bal.methods.tokenURI(nft_id).call();
+  
+  if (lnk.substring(0,4) == "ipfs"){
+	lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7)
+	}
+  var lnk1 = 'https://ipfs.io/ipfs/' + lnk.slice(7)
+  //alert(lnk1)
+  //alert(lnk)
+  //var lnk = "https://opensea.io/assets/matic/" & nft_k & "/" & nft_id
   //alert(bal);
   //var result = await getvalue()
   //console.log('Woo done!', json)
   
-    var el = document.createElement('html');
 	
 	var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
-            result = this.response;
-			el.innerHTML = result
-			image = el.getElementsByTagName( 'img' ).src;
-			console.log(result)
-			//JSONresult = JSON.parse(result);
-			//console.log(JSONresult.image);
-			//result = JSONresult.image
+            getImage(this)
 			
-			var img = new Image();
-            //img.src = JSONresult.image
-			img.src = image;
-            document.getElementById('body').appendChild(img);
-            //down.innerHTML = "Image Element Added.";
        }
+	
     };
-    xhttp.open("POST", lnk, true);
+    xhttp.open("GET", lnk, false);
     xhttp.send();
 	
 
