--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -147,22 +147,22 @@ display: block;
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; margin-top:120px;">trade</center>
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">your NFT</center>
 
-<input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:185; right:790;">NFT contract address 1</label>	
-<input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:220; right:790;">NFT contract token ID 1</label>		
+<input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:183; right:795;">contract address</label>	
+<input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:218; right:795;">contract token ID</label>		
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:100px;">&#8645;</center>
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">for</center>
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">their NFT</center>
-<input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:420; right:790">NFT contract address 2</label>
-<input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:450; right:790">NFT contract token ID 2</label>
+<input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:432; right:795">contract address</label>
+<input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:462; right:795">contract token ID</label>
 
 <input type="button" class="btn" value="offer trade" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>	
 
 </div>
-<div id=category121w82>	
-<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="prompt_approve()"/>	
-</div>
+
+<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="image_path()"/>	
+
 <div id="content"></div>
 
 
@@ -173,7 +173,7 @@ display: block;
 //var pwd = document.getElementById("password").value;
 
 function open_window() {
-  var myWindow = window.open("create_nft_swapx_polygon_add_live.html", "add to trade", "width=600,height=800");
+  var myWindow = window.open("create_nft_swapx_polygon_add_live.html", "add to trade");
 }               
 
 
@@ -516,11 +516,6 @@ var abi = [
 				"internalType": "uint256",
 				"name": "_fee",
 				"type": "uint256"
-			},
-			{
-				"internalType": "address",
-				"name": "_to",
-				"type": "address"
 			}
 		],
 		"name": "setfee",
@@ -1080,7 +1075,7 @@ var abi = [
 	//localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-var contract_address = web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
+var contract_address = web3.utils.toChecksumAddress("0x362796183ce6fb4e2215aa6ea57aadbc56b6a870")
 
 var contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -1088,6 +1083,67 @@ var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 
 var account_address = [];
 
+
+function image_path(){
+	localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").value);
+	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
+	localStorage.setItem("NFT_contract2", document.getElementById("NFT_contract2").value);
+	localStorage.setItem("NFT_Token_ID2", document.getElementById("NFT_Token_ID2").value);
+	//localStorage.setItem("mySharedData", document.getElementById("password").value);
+	
+	var contract_ID1 = localStorage.getItem("NFT_contract1");
+	var tokenID = localStorage.getItem("NFT_Token_ID1");
+	var loan_amt = localStorage.getItem("NFT_contract2");
+	var loan_term = localStorage.getItem("NFT_Token_ID2");
+	//var add1x = localStorage.getItem("mySharedData");
+
+
+	var image = await image_and_name(contract_ID1, tokenID, getImage);
+	//console.log(image);
+	//var newDiv = document.createElement('img');
+	//newDiv.id = 'rs'+i + j;
+	//newDiv.setAttribute('width', '15%');
+	//newDiv.setAttribute('height', '15%');
+	//newDiv.loading = "lazy";
+	//newDiv.onload = await "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))"
+	//newDiv.addEventListener("load", "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))");
+	//chat.appendChild(newDiv);
+	//ew1Div.addEventListener("load", getImage);
+	return 1
+	}
+	
+	function getImage(xhttp){
+			//var result = xhttp.response;
+			
+			var result = xhttp.response;
+			
+			JSONresult = JSON.parse(result);
+			
+			//JSONresult = result
+			
+			//console.log(JSONresult.image);
+			//var result1 = JSONresult.image
+			//return result1
+			var image_ = JSONresult.image
+			var img = new Image();
+			//'https://ipfs.io/ipfs/' + lnk.slice(7)
+			if (JSONresult.image.substring(0,4) == "ipfs"){
+			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
+			}
+            img.src = image_
+            ew1Div.appendChild(img);
+			console.log(image_)
+			return 1
+			
+			
+	
+	}
+	
+	
+	
+	
+	
+	
 
 
  $(document).ready(function(){
@@ -1259,7 +1315,7 @@ var acct = (async function(){
 	_nonce = result
         console.log(account)
 		
-	await web3.eth.sendTransaction({'gas': web3.utils.toHex(500000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 500001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
+	await web3.eth.sendTransaction({'gas': web3.utils.toHex(500000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 100000001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
          //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
             //console.log(accounts[0])
@@ -1320,45 +1376,42 @@ var acct = (async function(){
 })()
 }
 
-function image_and_name(){
+function image_and_name(k,n, getImage){
 
-	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract1").value);
-	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID1").value);
+	//localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
+	//localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
 	
-	var nft_k = localStorage.getItem("NFT Contract");
-	var nft_id = localStorage.getItem("NFT Token ID");
-	
+	//var nft_k = localStorage.getItem("NFT Contract");
+	var nft_k = k 
+	//var nft_id = localStorage.getItem("NFT Token ID");
+	var nft_id = n
   var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress(nft_k)
+  var contract_address = web3.utils.toChecksumAddress(nft_k)
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
-  //var lnk = await contract_bal.methods.tokenURI(nft_id).call();
-  var lnk = "https://opensea.io/assets/matic/" & nft_k & "/" & nft_id
+  var lnk = await contract_bal.methods.tokenURI(nft_id).call();
+  
+  if (lnk.substring(0,4) == "ipfs"){
+	lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7)
+	}
+  var lnk1 = 'https://ipfs.io/ipfs/' + lnk.slice(7)
+  //alert(lnk1)
+  //alert(lnk)
+  //var lnk = "https://opensea.io/assets/matic/" & nft_k & "/" & nft_id
   //alert(bal);
   //var result = await getvalue()
   //console.log('Woo done!', json)
   
-    var el = document.createElement('html');
 	
 	var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
-            result = this.response;
-			el.innerHTML = result
-			image = el.getElementsByTagName( 'img' ).src;
-			console.log(result)
-			//JSONresult = JSON.parse(result);
-			//console.log(JSONresult.image);
-			//result = JSONresult.image
+            getImage(this)
 			
-			var img = new Image();
-            //img.src = JSONresult.image
-			img.src = image;
-            document.getElementById('body').appendChild(img);
-            //down.innerHTML = "Image Element Added.";
        }
+	
     };
-    xhttp.open("POST", lnk, true);
+    xhttp.open("GET", lnk, false);
     xhttp.send();
 	
 
@@ -1396,7 +1449,7 @@ var acct = (async function(){
 	//var add1x = localStorage.getItem("mySharedData");
 	
  	var contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0xd284f2833f82732fe68be0be55ce279e5421bb19", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x362796183ce6fb4e2215aa6ea57aadbc56b6a870", nft_id).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
