--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -1100,16 +1100,17 @@ function image_path(){
 
 	var image = await image_and_name(contract_ID1, tokenID, getImage);
 	//console.log(image);
-	var newDiv = document.createElement('img');
-	newDiv.id = 'rs'+i + j;
+	//var newDiv = document.createElement('img');
+	//newDiv.id = 'rs'+i + j;
 	//newDiv.setAttribute('width', '15%');
 	//newDiv.setAttribute('height', '15%');
-	newDiv.loading = "lazy";
+	//newDiv.loading = "lazy";
 	//newDiv.onload = await "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))"
 	//newDiv.addEventListener("load", "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))");
 	//chat.appendChild(newDiv);
-	ew1Div.addEventListener("load", getImage);
-	
+	//ew1Div.addEventListener("load", getImage);
+	return 1
+	}
 	
 	function getImage(xhttp){
 			//var result = xhttp.response;
@@ -1139,7 +1140,7 @@ function image_path(){
 	}
 	
 	
-	}
+	
 	
 	
 	
