--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -1085,6 +1085,7 @@ var account_address = [];
 
 
 function image_path(){
+var _image = (async function(){
 	localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").value);
 	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
 	localStorage.setItem("NFT_contract2", document.getElementById("NFT_contract2").value);
@@ -1110,6 +1111,8 @@ function image_path(){
 	//chat.appendChild(newDiv);
 	//ew1Div.addEventListener("load", getImage);
 	return 1
+	
+	})()
 	}
 	
 	function getImage(xhttp){
