--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1189,7 +1189,8 @@ var _image = (async function(){
 
 
 	var image = await image_and_name(contract_ID1, tokenID, getImage);
-	console.log(image)
+	var image1 = img.src
+	console.log(image1)
 	//console.log(image);
 	//var newDiv = document.createElement('img');
 	//newDiv.id = 'rs'+i + j;
