--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1189,7 +1189,7 @@ var _image = (async function(){
 
 
 	var image = await image_and_name(contract_ID1, tokenID, getImage);
-	var image1 = img.src
+	var image1 = j_image
 	console.log(image1)
 	//console.log(image);
 	//var newDiv = document.createElement('img');
@@ -1226,7 +1226,7 @@ var _image = (async function(){
 			}
             img.src = image_
             //ew1Div.appendChild(img);
-			console.log(image_)
+			j_image = image_
 			
 			return 1
 			
