--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1172,6 +1172,7 @@ var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 
 var account_address = [];
 
+var j_image;
 
 function image_path(){
 var _image = (async function(){
